// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. lead one and one tablet slice 1`] = `
<div>
  <div>
    <TileU />
    <TileC />
  </div>
</div>
`;

exports[`2. lead one full width tablet slice 1`] = `
<div>
  <TileR />
</div>
`;

exports[`3. secondary four tablet slice 1`] = `
<div>
  <div>
    <div>
      <div>
        <TileC />
      </div>
      <div />
      <div>
        <TileC />
      </div>
    </div>
    <div />
    <div>
      <div>
        <TileC />
      </div>
      <div />
      <div>
        <TileC />
      </div>
    </div>
  </div>
</div>
`;
